spec/e2e/field/get_on_function.lit
fn foo {}

foo.bar # error: [line 3] Runtime error: Only instances have properties.
